--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,9 @@
   <header class="header">
       <h1>HEY MY NIGGeTS</h1>
   </header>
+
+  <footer class="footer">
+    Footer
+  </footer>
 </body>
 </html>
