--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
       <h1>HEY MY NIGGeTS</h1>
   </header>
 
+  <main class="content"></main>
+
   <footer class="footer">
     Footer lolilolilol
   </footer>
